# Proyecto_1_Auto_control_remoto_yocto

./: README.md  auth.js  car_control.c  car_control.h  control.html  control.js  my_gpio_lib_rip4.c  server  server.c  styles.css  test_pwm.c  vehicleApi.js
Capas_personalizadas/meta-local/conf/: layer.conf
Capas_personalizadas/meta-local/recipes-support/motion/: motion_4.7.1.bb
Capas_personalizadas/meta-local/recipes-support/motion/files/: motion.conf
Capas_personalizadas/meta-my-layer/recipes-core/images/: core-image-base.bbappend
Capas_personalizadas/meta-server/conf/: layer.conf
Capas_personalizadas/meta-server/recipes-server/server/files/: auth.js  control.html  control.js  manifest  server  server.service  users.json
logica_control_vehiculo/: CMakeLists.txt  README_DEPLOY.md  auth_utils.c  auth_utils.h  car_control.c  car_control.h  control.html  server.c  test_gpio.c  test_pwm.c
logica_control_vehiculo/include/: my_gpio_lib_rpi4.h
logica_control_vehiculo/lib/: CMakeLists.txt  my_gpio_lib_rpi4.c
meta-local/recipes-support/motion/files/: motion.service
meta-my-layer/conf/: layer.conf
meta-my-layer/recipes-bsp/bootfiles/files/raspberrypi4/: config.txt
meta-server/recipes-server/server/: server_1.0.bb
meta-server/recipes-server/server/files/: index.html  styles.css  vehicleApi.js
